@@ -1,2 +1,2 @@
-readPNG <- function(source)
-  .Call("read_png", if (is.raw(source)) source else path.expand(source), PACKAGE="png")
+readPNG <- function(source, native=FALSE)
+  .Call("read_png", if (is.raw(source)) source else path.expand(source), native, PACKAGE="png")
