@@ -8,6 +8,8 @@ NEWS/Changelog
     o	adapt to a last-minute change in R 2.11.0 from raster() to
 	rasterImage()
 
+    o	add support for more effieint nativeRaster format
+
 
 0.1-0	2010-03-17
     o	first release on CRAN, supports readPNG() and writePNG()
